--- a/kailey-williams.html
+++ b/kailey-williams.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>index.html</title>
-	<link rel="stylesheet" type="text/css" href="//css/main.css">
+	<title>Kailey Williams</title>
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 	<div class="logo">
