--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link href="main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="logo">
