--- a/kailey_williams/share.html
+++ b/kailey_williams/share.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 	<title>share</title>
-	<link href="main.css" rel="stylesheet" type="text/css">
+	<link href="/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="logo">
