--- a/kailey_williams/share.html
+++ b/kailey_williams/share.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="logo">
-		<a href="index.html">pronoun corrector</a>
+		<a href="../index.html">pronoun corrector</a>
 	</div>
 	<div class="section">
 	  <p>qr</p>
