--- a/kailey_williams/share.html
+++ b/kailey_williams/share.html
@@ -9,11 +9,8 @@
 	<div class="logo">
 		<a href="../index.html">pronoun corrector</a>
 	</div>
-	<div class="section">
+	<div class="qr">
 	  <img src="kailey_williams_share.jpg" alt="QR code">
-	</div>
-	<div class="footer">
-		<p>This is a site created by and for trans people, to serve as a response to being misgendered. You are invited to create your own version of the site if this is something that would be helpful to you. You can contact the site administrator to have a page added to the site with your name and pronouns and any edits to the text.</p>
 	</div>
 </body>
 </html>
