--- a/kailey_williams/share.html
+++ b/kailey_williams/share.html
@@ -9,7 +9,7 @@
 	<div class="logo">
 		<a href="../index.html">pronoun corrector</a>
 	</div>
-	<div class="qr">
+	<div class="section">
 	  <img src="kailey_williams_share.jpg" alt="QR code">
 	</div>
 </body>
