--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<a href="https://pronouncorrector.com/">pronoun corrector</a>
 	</div>	
 	<div class="footer">
-		<p>This is a site created by and for trans people, to serve as a response to being misgendered. You are invited to create your own version of the site if this is something that would be helpful to you. You can contact the site administrator by emailing contact@pronouncorrector.com to have a page added to the site with your name and pronouns and any edits to the text.</p>
+		<p>This is a site created by and for trans people, to serve as a response to being misgendered. You are invited to create your own version of the site if this is something that would be helpful to you. You can contact the site administrator by emailing <a href="mailto:contact@pronouncorrector.com">contact@pronouncorrector.com</a> to have a page added to the site with your name and pronouns and any edits to the text.</p>
 		<a href="https://pronouncorrector.com/kailey_williams/">example page: Kailey Williams</a>
 	</div>
 </body>
