--- a/kailey_williams.html
+++ b/kailey_williams.html
@@ -53,8 +53,9 @@
 	
 	<div class="section">
 <h2>About this site</h2>
-<p>This is not the first time Kailey has been misgendered, so they have created this site to direct individuals who misgender them to. </p>
-		<p>If you are a trans person, you are invited to create your own version of this site if it would be helpful to you. You can contact Kailey to have a page added to the site with your name and pronouns which you can share with others via the URL or a QR code. </p>
-		<p>This site was created in 2021 for an Experience and Interaction course </p>
+	<div class="footer">
+		<p>This is a site created by and for trans people, to serve as a response to being misgendered. You are invited to create your own version of the site if this is something that would be helpful to you. You can contact the site administrator by emailing <a href="mailto:contact@pronouncorrector.com">contact@pronouncorrector.com</a> to have a page added to the site with your name and pronouns and any edits to the text.</p>
+		<a href="https://pronouncorrector.com/kailey_williams/share">share</a>
+	</div>
 </body>
 </html>
