--- a/kailey_williams.html
+++ b/kailey_williams.html
@@ -32,28 +32,25 @@
 		<p>unlearn gendered assumptions you make about people you meet, on the basis of their voice, appearance, name, and/or gender expression		  </p>
 		<p>engage with self-education resources and events to help you better understand trans people, identities, and experiences </p>
 	</div>
-<div class="section">
-  <h2>What to expect after you apologize:</h2>
-	<p>They may thank you for your apology and/or simply give you a thumbs up. You should interpret this as a signal that they want to move on with the conversation</p>
-	<p>Note that they may respond to an apology with “it’s okay” out of habit. This does not mean that misgendering people is okay, it just means that they are uncomfortable and want to end the conversation as soon as possible. </p>
-  </div>
-<div class="section">
-  <h2>What not to do:</h2>
-  <h3>Do not attempt to engage them in a discussion about the evolving nature of language</h3>
-	<p>Language is a genuine topic of interest for Kailey, however it is very unlikely that they will have any interest in discussing it with you immediately after being misgendered</p>
-  <h3>Do not make excuses for why you have misgendered Kailey</h3>
-	<p>They understand that getting pronouns right can be harder for some people</p>
-	<p>However, attempts to excuse your behavior are not really acceptable</p>
-	<p>You should instead commit to doing better in the future, and take some of the steps outlined above or seek out additional resources </p>
-  <h3>Do not shift the conversation to bring up anecdotes that you feel are pertinent</h3>
-	<p>Hearing about a Thanksgiving conversation your family members had about how they don’t get pronouns is not relevant or warranted
-</p>
-	<p>Please recognize that by dwelling on the action of misgendering someone and centering that in the conversation, even tangentially, will only cause more discomfort </p>
-  </div>
-	
 	<div class="section">
-<h2>About this site</h2>
-	<div class="footer">
+  		<h2>What to expect after you apologize:</h2>
+		<p>They may thank you for your apology and/or simply give you a thumbs up. You should interpret this as a signal that they want to move on with the conversation</p>
+		<p>Note that they may respond to an apology with “it’s okay” out of habit. This does not mean that misgendering people is okay, it just means that they are uncomfortable and want to end the conversation as soon as possible. </p>
+ 	 </div>
+	<div class="section">
+ 		<h2>What not to do:</h2>
+  		<h3>Do not attempt to engage them in a discussion about the evolving nature of language</h3>
+		<p>Language is a genuine topic of interest for Kailey, however it is very unlikely that they will have any interest in discussing it with you immediately after being misgendered</p>
+  		<h3>Do not make excuses for why you have misgendered Kailey</h3>
+		<p>They understand that getting pronouns right can be harder for some people</p>
+		<p>However, attempts to excuse your behavior are not really acceptable</p>
+		<p>You should instead commit to doing better in the future, and take some of the steps outlined above or seek out additional resources </p>
+  		<h3>Do not shift the conversation to bring up anecdotes that you feel are pertinent</h3>
+		<p>Hearing about a Thanksgiving conversation your family members had about how they don’t get pronouns is not relevant or warranted</p>
+		<p>Please recognize that by dwelling on the action of misgendering someone and centering that in the conversation, even tangentially, will only cause more discomfort </p>
+  	</div>
+	<div class="section">
+		<h2>About this site</h2>
 		<p>This is a site created by and for trans people, to serve as a response to being misgendered. You are invited to create your own version of the site if this is something that would be helpful to you. You can contact the site administrator by emailing <a href="mailto:contact@pronouncorrector.com">contact@pronouncorrector.com</a> to have a page added to the site with your name and pronouns and any edits to the text.</p>
 		<a href="https://pronouncorrector.com/kailey_williams/share">share</a>
 	</div>
